# AnnoPRO

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  get_data.sh  main.py  predict.sh  profeat-new-version.rar  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_all.py  test_fortran_compile.sh  test_install.sh
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/workflows/: pypi.yml
AnnoPRO/data_procession/: consine_distances.py  data_process.py
AnnoPRO/plot/: plt_sample.py
PFmap/data_procession/: consine_distances.py  data_predict.py  data_process.py  erro.py  main.py  utils.py
annopro/: __init__.py  __main__.py  _version.py  annopro_bp.py  prediction.py  resources.py  train_model.py
annopro/data/: __init__.py
annopro/data_procession/: __init__.py  blast.py  consine_distances.py  data_predict.py  data_process.py  erro.py  error.py  libprofeat.f  profeat.py  utils.py
annopro/data_procession/_libprofeatconfig/: input-ligand.sdf
annopro/model_param/: __init__.py
annopro/predict/: main.py  predict_label.py
annopro/train_data/: test.fa
example/: O14793.html  bp_result.csv  case.txt  cc_result.csv  mf_result.csv  protein.pkl
notebook/: data_process.ipynb  plt.ipynb
predict/: main.py  predict_label.py
test/: test.py
train_data/: valid.fasta
