# Inside of setup.cfg
[metadata]
name = annopro
author = Zheng.L.Y and Zhang.H.N
author_email = zhenglingyan@zju.edu.cn
url = https://github.com/idrblab/AnnoPRO/
version = 0.1rc1
description = A simple python package for annotating protein sequences
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Bio-Informatics
    Environment :: Console
license = MIT License